--- a/tablas/templates/ciudades_select.html
+++ b/tablas/templates/ciudades_select.html
@@ -1,4 +1,4 @@
-<select required="required" class="form-control w-auto" name="ciudad" id="ciudad" style="font-size:11px;">
+<select required="required" class="form-control w-auto inputselect" name="ciudad" id="ciudad" style="font-size:11px;">
     {% for ciudad in ciudades %}
         <option value="{{ ciudad.id }}" class="text8l">{{ ciudad.nombre }}</option>
     {% endfor %}
