--- a/templates/204.html
+++ b/templates/204.html
@@ -6,5 +6,5 @@ HTML 204
 
 {% block content %}
 	<h1>204</h1>
-	<h2>Oops! Under In Development</h2>
+	<h2>Oops! Under Development</h2>
 {% endblock %}
