--- a/inventariohlag/templates/activos_ajax_listar.html
+++ b/inventariohlag/templates/activos_ajax_listar.html
@@ -4,10 +4,10 @@
         <thead >
             <tr>
                 <th width="5%" class="tdtit10">Active<br />Type</th>
-                <th width="12%" class="tdtit10">Active<br />Identifier</th>
+                <th width="7%" class="tdtit10">Active<br />Identifier</th>
                 <th width="15%" class="tdtit10">Active<br />Name</th>
                 <th width="15%" class="tdtit10">Manufacturer</th>
-                <th width="15%" class="tdtit10">Model</th>
+                <th width="20%" class="tdtit10">Model</th>
                 <th width="15%" class="tdtit10">Serial Number</th>
                 <th width="10%" class="tdtit10">Country</th>
                 <th width="13%" class="tdtit10">Action</th>
@@ -23,7 +23,7 @@
                         {% endif %}
                     {% endfor %}
                 </td>
-                <td class="text8c" id="iden{{activo.id}}">{{activo.identificador}}</td>
+                <td class="text8c" id="iden{{activo.id}}">{{activo.newid}}</td>
                 <td class="text8c" id="nom{{activo.id}}">{{activo.nombre}}</td>
                 <td class="text8c" id="fab{{activo.id}}">{{activo.fabricante.nombre}}</td>
                 <td class="text8c" id="mod{{activo.id}}">{{activo.modelo.nombre}}</td>
