--- a/static/css/system.css
+++ b/static/css/system.css
@@ -253,24 +253,26 @@
 }
 
 .LV_invalid {
-    color:#CC0000;
-}
+  color:#CC0000;
+  }
 
-.LV_valid_field,
+.LV_valid_field{
 input.LV_valid_field:hover,
 input.LV_valid_field:active,
 textarea.LV_valid_field:hover,
 textarea.LV_valid_field:active {
     border: 1px solid #00CC00;
-}
+    }
+  }
 
-.LV_invalid_field,
+.LV_invalid_field{
 input.LV_invalid_field:hover,
 input.LV_invalid_field:active,
 textarea.LV_invalid_field:hover,
 textarea.LV_invalid_field:active {
     border: 1px solid #CC0000;
-}
+    }
+  }
 
 .mboton {
  height: 20px;    /* altura */
