--- a/templates/home_admin.html
+++ b/templates/home_admin.html
@@ -73,8 +73,9 @@
                 Inventory
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" id='viewassets' name='viewassets' href="/activos">Assets</a></li>
-                <li><a class="dropdown-item" href="/en_desarrollo">QR Codes</a></li>
+                <li><a class="dropdown-item" id='viewassets' name='viewassets' href="/activos">Assets</a></li> 
+                <li><a class="dropdown-item" href="/qr_filtrar">QR Codes List</a></li>
+                <li><a class="dropdown-item" href="/tablas/tablasimple/5">Areas Names</a></li>
                 <li><a class="dropdown-item" href="/areas_listar">Countries by Areas</a></li>
               </ul>
             </li>
@@ -91,7 +92,6 @@
                 <li><a class="dropdown-item" href="/tablas/tablasimple/0">Manufacturers</a></li>
                 <li><a class="dropdown-item" href="/tablas/modelos">Models</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="/tablas/tablasimple/5">Areas Names</a></li>
                 <li><a class="dropdown-item" href="/tablas/paises">Countries</a></li>
                 <li><a class="dropdown-item" href="/tablas/ciudades">Cities</a></li>
                 <li><a class="dropdown-item" href="/tablas/edificios">Buildings</a></li>
