--- a/tablas/templates/paises_listar.html
+++ b/tablas/templates/paises_listar.html
@@ -7,7 +7,7 @@
 {% block content %}
 
     <!-- Custom JS -->
-<script type="text/javascript" src="{% static 'js/tablas/paises.min.js' %}"></script>  
+<script type="text/javascript" src="{% static 'js/tablas/paises.js' %}"></script>  
 
 <div class="container mt-4">
 
