--- a/usuarios/templates/usuarios_ajax_listar.html
+++ b/usuarios/templates/usuarios_ajax_listar.html
@@ -22,14 +22,14 @@
                 <td class="text8l" id="ema{{persona.id}}">{{persona.email}}</td>
                 <td class="text8c" id="per{{persona.id}}">{{persona.get_perfil_display}}</td>
                 <td class="text8c" id="pai{{persona.id}}">{{persona.pais.nombre}}</td>
-                <td class="text8c" id="pai{{persona.id}}">{{persona.pais.nombre}}</td>
+                <td class="text8c" id="pai{{persona.id}}">{{persona.area.nombre}}</td>
                 <td class="text8c" id="est{{persona.id}}">{{persona.get_estado_display}}</td>
                 <td class="text8c" id="tac{{persona.id}}">{{persona.get_tipoactivo_display}}</td>
                 <td class="text8c"> 
-                {% if request.user.is_superuser %}
                     <button class='btn btn-sm btn-outline-success tip' title='View User' onClick='VerRegistro({{persona.id|stringformat:"d"}})'>
                         <i class='bi-solid bi-search'></i>
                     </button> 
+                {% if request.user.is_superuser %}
                     <button class='btn btn-sm btn-outline-primary tip' title='Edit User' onClick='EditarRegistro({{persona.id|stringformat:"d"}})'>
                         <i class='bi-solid bi-pencil'></i>
                     </button>
@@ -37,13 +37,13 @@
                         <i class='bi-solid bi-pass'></i>
                     </button>
                     {% if persona.estado == "0" %}
-                            <button class='btn btn-sm btn-outline-primary tip' title='Enable User' onClick='DesBloquearRegistro({{persona.id}})'>
-                                <i class='bi bi-unlock'></i>
-                            </button>
+                        <button class='btn btn-sm btn-outline-primary tip' title='Enable User' onClick='DesBloquearRegistro({{persona.id}})'>
+                            <i class='bi bi-unlock'></i>
+                        </button>
                     {% else %}
-                            <button class='btn btn-sm btn-outline-primary tip' title='Disable User' onClick='BloquearRegistro({{persona.id}})'>
-                                <i class='bi bi-lock'></i>
-                            </button>
+                        <button class='btn btn-sm btn-outline-primary tip' title='Disable User' onClick='BloquearRegistro({{persona.id}})'>
+                            <i class='bi bi-lock'></i>
+                        </button>
                     {% endif %}
                 {% endif %}
                 </td>
