--- a/templates/login.html
+++ b/templates/login.html
@@ -23,9 +23,10 @@
                 <div class="card-body p-lg-3 text-black">
                   <div class="input-group flex-nowrap mx-2">
                     <div class="d-flex flex-column">
+                      <input type="hidden" name="next_url" id="next_url" value="{{ next_url }}">
                       <form id="formlogin" name="formlogin" method="POST">                      
                         {% csrf_token %}
-                        <div class="d-flex flex-column ">
+                        <div class="d-flex flex-column">
                           <div class="form-group">
                             <label for="username">User:
                               <input type="text" class="form-control" id="username" name="username" />
