--- a/inventariohlag/templates/activos_qr_filtrar.html
+++ b/inventariohlag/templates/activos_qr_filtrar.html
@@ -131,6 +131,19 @@
                                     </div>
                                 </div>
                                 <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="tit10lb">First Label:</label>
+                                            <div class="input-group align-items-center">
+                                                <span class="input-group-text tit10lb me-2">Column</span>
+                                                <input type="text" name="fcol" id="fcol" value="1" maxlength="2" class="form-control text8l" style="width: 10px;" />
+                                                <span class="input-group-text tit10lb mx-2">Row</span>
+                                                <input type="text" name="frow" id="frow" value="1" maxlength="2" class="form-control text8l" style="width: 10px;" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
                                     <div class="pt-1 mb-4 d-flex">
                                         <button type="submit" class="w-100 mb-2 btn btn-lg rounded-3 btn-primary mx-3" id="btnsubmit" name="btnsubmit">Find</button>
                                     </div>
